[E7.S2] Landing page and onboarding (#196)
* feat(E7.S2): Landing page and onboarding


* chore(#86): pipeline artifacts


---------
